--- a/WP_Krill_Param.Rmd
+++ b/WP_Krill_Param.Rmd
@@ -8,7 +8,7 @@ author:
   - Francisco Santa Cruz ^[Instituto Antártico Chileno, Universidad de Magallanes]
 date:  "`r format(Sys.time(), '%d %B, %Y')`"
 output:
-  bookdown::pdf_document2:
+  bookdown::word_document2:
     number_sections: false
 fig_caption: yes
 bibliography: param.bib
@@ -62,16 +62,17 @@ library(ggthemes)
 
 # ABSTRACT
 
-The Western Antarctic Peninsula ecosystem plays a critical role in the life of Antarctic krill (*Euphausia superba*). Recent environmental changes and escalating exploitation in this area have led to alterations in krill population structure, necessitating sustainable resource management. In this study, we derive growth parameters and natural mortality rates for krill while considering spatial heterogeneity in the Western Antarctic Peninsula. We use Modal Progression Analysis (MPA) to estimate \(L_\infty\) and \(K\) for each management stratum inside subarea 48.1. Subsequently, we calculate natural mortality for each stratum using bioanalogical methods. Our results reveal differences in life history parameters that colud be discuss in management and advice when model based approximations about dynamics population of krill is analysed. This study underscores the importance of accounting for spatial heterogeneity in estimating krill life cycle parameters, which can significantly impact assessment models used to provide management recommendations to CCAMLR.
+The Western Antarctic Peninsula ecosystem plays a critical role in the life of Antarctic krill (*Euphausia superba*). Recent environmental changes and escalating exploitation in this area have led to alterations in krill population structure, calling for a review of the management approach. In this study, we derive growth parameters and natural mortality rates for krill while considering spatial heterogeneity in the Western Antarctic Peninsula. We use Modal Progression Analysis (MPA) to estimate \(L_\infty\) and \(K\) for each management stratum inside subarea 48.1. Subsequently, we calculate natural mortality for each stratum using bioanalytical  methods. Our results reveal differences in life history parameters that could be discussed in management and advice when model based approximations about dynamics population of krill is analyzed. This study underscores the importance of accounting for spatial heterogeneity in estimating krill life cycle parameters, which can significantly impact assessment models used to provide management recommendations to CCAMLR.
 
 
-*Keywords: krill population, spatial heterogeneity, growth parameters, natural mortality,  Progression Modal Analysis, bioanalogical models *
+
+*Keywords: krill population, spatial heterogeneity, growth parameters, natural mortality,  Progression Modal Analysis, bioanalytical  models *
 
 \newpage
 
 # INTRODUCTION
 
-Krill is a particularly important organism in the Antarctic ecosystem. In recent years, environmental changes and increasing exploitation coupled is causing changes in its population structure in spatio-temporal terms in krill populations, has drawn attention to the management of the resource as a central axis for the sustainability of its populations. To this end, various approaches have emerged aiming to provide or make recommendations for management based on models, as GRYM [@Maschette2020] and itegrated models [@Wang2021]. A key aspect in the analysis of populations and their dynamics is having good and updated estimates of the life history parameters of the species being evaluated, as growth and natural mortality components [@Perreault2021; @Mannini2020]. Considering their importance, several approaches have been taken to determine them in krill [@Melvin2018; @Pakhomov1995a; @Reid2010a; @Siegel2000b; @Rosenberg1986]. However, these estimates have been global and do not consider the particularity and spatial heterogeneity of krill in the main exploitation areas along the Western Antarctic Peninsula (WAP). To achieve this, we employed one of the most well-known methods for parameter estimation in individuals or species for which it is difficult to determine ages, such as invertebrates [@Gayanilo1997; @Gayanilo2005; @Sparre1999]. In this case, we used Modal Progression Analysis (MPA) to estimate  \(L_\infty\) and \(K\) for each of the management strata recommended by @Dornam2021. Additionally, after analyzing and estimating the growth parameters, we calculated natural mortality for each of the strata using biological methods by using a `TropFishR` package [@Mildenberger2017]. In both cases and analyses, we considered the differences between males and females. To do this, we will use the lengths compositions of the fishery monitoring data, which contain information and time series that allow for consistent estimators for each of the strata inside WAP where krill fishery occurs and models to estimated populations variables is using to give advice to management. With this, we aim, on the one hand, to update the parameter estimates using methods commonly known in fisheries science and, on the other hand, to rise a debate regarding the vitality of research in life history parameters in krill taking into account spatial heterogeneity and its potential impact on estimation on population variables from assessment models currently used to provide recommendations to CCAMLR.
+Antarctic Krill (*Euphausia superba*, Krill hereafter) is a particularly important organism in the Antarctic ecosystem. In recent years, environmental changes coupled with increasing exploitation causing shifts in its population structure and spatio-temporal dynamics [@Atkinson2022; @McBride2021; @Perry2020], has drawn attention to the management of the resource as a central axis for the sustainability of its populations. To this end, various approaches have emerged aiming to provide or make recommendations for management based on models, such as GRYM [@Maschette2020] and integrated models [@Wang2021]. A key aspect in the analysis of populations and their dynamics is having accurate and updated estimates of the life history parameters of the species being evaluated, for instance, growth and natural mortality components [@Clark1999; @Perreault2021; @Mannini2020]. Considering the importance of those parameters to exploited species population dynamics, several approaches have been taken to determine them in krill [@Melvin2018; @Pakhomov1995a; @Reid2010a; @Siegel2000b; @Rosenberg1986]. However, these estimates have been global and do not consider the particularity and spatial heterogeneity of krill in the main exploitation areas along the Western Antarctic Peninsula (WAP). In order to incorporate spatial heterogeneity in the population model of Krill, we employed Modal Progression Analysis (MPA), one of the most well-known methods for parameter estimation in individuals or species for which it is difficult to determine ages, such as invertebrates [@Gayanilo1997; @Gayanilo2005; @Sparre1999]. We  used MPA to estimate growth coefficient \(K\) , the asymptotic length \(L_\infty\) for each of the management strata recommended by WG-ASAM e-group on Krill biomass estimates from acoustic surveys [@Dornam2021]. After analyzing and estimating the growth parameters, we calculated natural mortality for each of the strata using biological methods using the `TropFishR` package [@Mildenberger2017]. In both cases and analyses, we considered the differences between males and females. We used the individual krill lengths compositions of the fishery monitoring data, for each of the strata inside WAP where krill fishery occurs. On one hand, we aim to update the parameter estimates using methods commonly known in fisheries science and, on the other hand, to rise a debate regarding the vitality of research in life history parameters in krill taking into account spatial heterogeneity and its potential impact on estimation on population variables from assessment models currently used to provide recommendations to CCAMLR.
 
 \newpage
 
@@ -79,18 +80,16 @@ Krill is a particularly important organism in the Antarctic ecosystem. In recent
 
 ## Study area
 
-The study area includes subarea 48.1, which is one of the sectors where today the largest amount of krill fishing is concentrated [@McBride2021; @Atkinson2022]. In order to have a finest spatial definition of krill dynamics population, we will analyze the differences between the management strata defined in WG-EMM-2021/05 Rev. (@Dornam2021), namely Bransfield Strait, Elephant Island, GERLACHE Strait, Joinville Island and South West (hereafter BS, EI, GS, JOIN and SSIW respectively) (Figure \@ref(fig:mapa))
+The study area focused on subarea 48.1, which is one of the sectors where today the largest amount of krill fishing is concentrated [@McBride2021; @Atkinson2022]. In order to have a finest spatial definition of krill dynamics population, we analyzed the differences between the management strata defined in WG-EMM-2021/05 Rev. [@Dornam2021], namely Bransfield Strait, Elephant Island, Gerlache Strait, Joinville Island and South Shetland Islands West (hereafter BS, EI, GS, JOIN and SSIW respectively) (Figure \@ref(fig:mapa))
 
 
 ## Monitoring Data (SISO Program)
 
-For this analysis, data from the monitoring of the krill fishery were used, which have been systematically collected on board fishing vessels by the CCAMLR SISO (Scheme of International Scientific Observation) program. Krill lenght compositions were obtained from the entire area 48.1, which was combined in each management stratum defined at 2.1 section (Figure \@ref(fig:hist)). We use this kind of information because length composition collected from fishery cover all range of sizes in krill populations. The information gaps was calculating trough proportion of records per year and per stratum in a table (Suppl Mat). This table allows us to establish criteria for defining the strata on which we will analyze krill parameter. We leave out just JOIN.
-
+For this analysis, data from the monitoring of the krill fishery were used, which have been systematically collected on board fishing vessels by the CCAMLR SISO (Scheme of International Scientific Observation) program. Krill length compositions were obtained from the entire area 48.1, which was combined in each management stratum defined at 2.1 section (Figure \@ref(fig:hist)). We used this kind of information because length composition collected from fishery cover all range of sizes in krill populations. The information gaps was calculating trough proportion of records per year and per stratum in a table. We left out just JOIN because there is not enough data for the analysis (Suppl Mat).
 
 ## Growth Parameters Estimation  (\(L_\infty\) and \(K\))
 
-
-To estimate growth parameters in krill population in WAP we use Modal progression analysis (MPA), MPA is a technique that tracking the changes in the length frequency distribution of a marine population over time. This method identifies distinct modes (peaks) in the size distribution, which represent cohorts of individuals that were born at the same time. By following these cohorts through subsequent sampling periods, it is possible to infer growth rates and other key biological parameters. The algoritm step to calculate parametres are; 1. Gather length-frequency data from the population at different times. This involves measuring the sizes of individuals in the population and recording the frequency of each size class; 2. Identify and track the distinct peaks (modes) in the size-frequency distributions. These peaks represent groups of individuals of similar age. this component was done with `mixR` package [@Yu2021]; 3. Follow the identified modes over time to see how they shift. The movement of these modes over successive sampling periods reflects the growth of the individuals in those cohorts; 4. Fit the observed shifts in modes to a growth model, such as the von Bertalanffy growth function (VBGF). This involves estimating parameters such as the growth coefficient (\(K\)), the asymptotic length ( \(L_\infty\)), and the initial size at age zero (L0);5. Use the fitted model to derive growth parameters that describe how individuals in the population grow over time. All this process about estimation of growth from the progression of length compositions modes through time using the von Bertalanffy growth function (VBGF) using Electronic LEngth Frequency ANalysis (ELEFAN). ELEFAN is a widely used software tool that applies modal progression analysis to estimate growth parameters based on seminal book from @Pauly1987. It automates the process of identifying and tracking modes in length-frequency data, making the analysis more efficient and accurate. ELEFAN use optimization techniques to find the best set of growth parameters that minimize the difference between the observed and expected sizes of individuals in each cohort over time. for krill, we uses two techniques; `ELEFAN GA` Electronic LEngth Frequency ANalysis with genetic algorithm used for estimating growth parameters and `ELEFAN SA` Electronic LEngth Frequency ANalysis with simulated annealing for estimating growth parameters.
+To estimate growth parameters in the krill population in WAP we used Modal progression analysis (MPA). MPA is a technique that tracks the changes in the length frequency distribution of a marine population over time. This method identifies distinct modes (peaks) in the size distribution, which represent cohorts of individuals that were born at the same time.  By following these cohorts through subsequent sampling periods, it is possible to infer growth rates and other key biological parameters. The steps  to calculate parameters are: (1) Gather length-frequency data from the population at different times, this involves measuring the sizes of individuals in the population and recording the frequency of each size class; (2) Identify and track the distinct peaks (modes) in the size-frequency distributions; these peaks represent groups of individuals of similar age,  this component was calculated using `mixR` package [@Yu2021]; (3) follow the identified modes over time to see how they shift; the movement of these modes over successive sampling periods reflects the growth of the individuals in those cohorts; (4) Fit the observed shifts in modes to a growth model, such as the von Bertalanffy growth function (VBGF); this involves estimating parameters such as the (\(K\)) and (\(L_\infty\)), and the initial size at age zero (\(L_0\); (5) Use the fitted model to derive growth parameters that describe how individuals in the population grow over time. All this process about estimation of growth parameters was based on Electronic LEngth Frequency ANalysis (ELEFAN). ELEFAN is a widely used software tool that applies modal progression analysis to estimate growth parameters based on a seminal book from Pauly & Morgan (1987). It automates the process of identifying and tracking modes in length-frequency data, making the analysis more efficient and accurate. ELEFAN uses optimization techniques to find the best set of growth parameters that minimize the difference between the observed and expected sizes of individuals in each cohort over time. For krill, we used two techniques; `ELEFAN GA` (Electronic LEngth Frequency ANalysis with Genetic Algorithm) used for estimating growth parameters and `ELEFAN SA` (Electronic LEngth Frequency ANalysis with Simulated Annealing) for estimating growth parameters. These techniques allow for greater certainty in the estimation and enable comparisons between them.
 
 
 The von Bertalanffy growth function, which is often used in modal progression analysis and implemented in ELEFAN, is expressed as:
@@ -125,62 +124,57 @@ where:
 
 ## Natural Mortality Estimation
 
-The natural mortality rate (M) is a key parameter for modeling fish population
-dynamics and can be defined as the proportion of fish dying from all causes except fishing (e.g.,senescence, predation, cannibalism, disease, and pollution) (Froese and Pauly, 2019). Both the perceived stock status and the associated fisheries advice rely greatly on the chosen value of M. Stock assessment models typically need an external estimate of the natural mortality rate (M), which is generally assumed to be constant across all ages and years within the model. While this assumption of a fixed M can significantly oversimplify reality, model diagnostics, such as profile likelihoods that could elucidate the impact of M on model fit, are often not utilized in practice [@Perreault2021]. Estimating natural mortality (M) is a crucial aspect of fisheries science. Several bioanalogical methods have been developed, each based on empirical data and various life history parameters [@Mannini2020]. In this analysis, we use four appropriate methods regarding data availability and life story in krill.
+Fish populations rely on the natural mortality rate (M) to model their dynamics. This rate represents the portion of fish dying annually from non-fishing causes [@Mannini2020] . Both the perceived stock status and the associated fisheries advice rely greatly on the chosen value of M. Stock assessment models typically need an external estimate of the natural mortality rate (M), which is generally assumed to be constant across all ages and years within the model. While this assumption of a fixed M can significantly oversimplify reality, model diagnostics, such as profile likelihoods that could elucidate the impact of M on model fit, are often not utilized in practice [@Perreault2021]. Estimating natural mortality (M) is a crucial aspect of fisheries science. Several bioanalogical methods have been developed, each based on empirical data and various life history parameters [@Mannini2020]. In this analysis, we use four appropriate methods regarding data availability and life story in krill.
 
-#### Pauly's Method (Pauly_Linf)
 
-Pauly's method estimates natural mortality based on the von Bertalanffy growth parameters, ambient temperature, and the asymptotic length (\(L_\infty\)). The formula is given by:
+@Pauly1980a estimates natural mortality based on the von Bertalanffy growth parameters, ambient temperature, and the asymptotic length (\(L_\infty\)). The formula is given by:
 
 
 \[ M = e^{-0.0152 C^{0.6543} \log k / -0.279 \log L_1 + 0.4634 \log T}\]
 
 where \( K \) is the growth coefficient, \( L_\infty \) is the asymptotic length, and \( T \) is the mean annual temperature in degrees Celsius, using 5ºC to SO.
 
-#### Hoenig's Method
-
-Hoenig proposed two methods for estimating natural mortality, one for fish and another for invertebrates. Hoenig's method for invertebrates is similarly based on the maximum age:
+@Hoenig1983 proposed two methods for estimating natural mortality, one for fish and another for invertebrates. Hoenig's method for invertebrates is similarly based on the maximum age:
 
    \[ \log(M) = 1.44 - 0.982 \log(t_{\text{max}}) \]
 
 
-#### Alverson and Carney's Method
-
-Alverson and Carney developed an empirical model relating natural mortality to the von Bertalanffy growth parameters. The formula is:
+@Alverson1975 developed an empirical model relating natural mortality to the von Bertalanffy growth parameters. The formula is:
 
 
 \[ M = \frac{3K}{\left(e^{0.38 \cdot \text{Tmax} \cdot K}\right)^{-1}} \]
 
 where \( K \) and \( L_\infty \) are the same von Bertalanffy growth parameters as previously described.
 
-#### Rikhter and Efanov's Method
-
-Rikhter and Efanov provided a method based on the age at maturity (\( t_m \)). The formula is:
+@Rikhter1976 provided a method based on the age at maturity (\( t_m \)). The formula is:
 
 \[ M = \frac{1.521}{t_m^{0.72}} - 0.155 \]
 
 where \( t_m \) is the age at which 50% of the population of krill reaches maturity, this is 34 mm [@Maschette2020].
 
-All this methods, this mean growth parameters estimation and bioanalogical model to natural mortality were appplied using a `TropFishR` package [@Mildenberger2019]. `TropFishR` is a useful tool to estimate a several component in a marine population, from parameters to status.
+All these methods, this mean growth parameters estimation and bioanalytical model to natural mortality were applied using a `TropFishR` package  [@Mildenberger2019]. `TropFishR` is a useful tool to estimate several components in a marine population, from parameters to status.
 
 
 \newpage
 
 # RESULTS
 
-To growth parameters and using `mixR` functions we found different modal compositions by strata, that was included in esimatiio parameters models (Figure \@ref(fig:comps)). Then we calculate cohort and increment with `ELEFAN` methods by sex an strata (Figure \@ref(fig:cohortmale); \@ref(fig:incremale)). 
+Figure \@ref(fig:comps) shows the distribution of krill size by age group for four different strata using `mixR`. We found different modal compositions by strata, that was included in estimation parameters models.: GERLACHE, ELEPHANT ISLAND, BRANSFIELD STRAIT, and SSWI by panel. The x-axis of each panel shows the krill size in millimeters, and the y-axis shows the probability density. The panels show the distribution by age group in different colors. Younger krill are generally smaller than older krill. The distribution of krill size also varies by strata. For example, the krill in GERLACHE tend to be larger than the krill in SSWI. 
 
-The Table \@ref(fig:tablegp) presents life history parameters (LH) for krill across different strata using two estimation algorithms, Genetic Algoritm and Simulated Annealing. For the Bransfield stratum, the asymptotic length (L_inf) for females ranges from 5.92400 (SA) to 6.00100 (GA), with corresponding growth rates (K) ranging from 0.752 (GA) to 0.831 (SA). For males in the BS stratum, L_inf ranges from 5.594 (SA) to 5.907 (GA), and K ranges from 0.604 (SA) to 0.82000 (GA). In the EI stratum, L_inf for females ranges from 5.58500 (SA) to 5.90300 (GA), with K ranging from 0.634 (GA) to 0.958 (SA). Male L_inf in EI ranges from 7.24900 (GA) to 7.31400 (SA), with K values between 0.785 (GA) and 0.941 (SA). In the SSWI stratum, female L_inf varies from 6.003 (SA) to 6.838 (GA), and K ranges from 0.501 (GA) to 0.659 (SA). Male L_inf in SSWI ranges from 6.419 (SA) to 6.582 (GA), with K values between 0.71200 (GA) and 0.76800 (SA). For the GS stratum, female L_inf ranges from 5.660 (SA) to 5.988 (GA), with K values from 0.584 (GA) to 0.905 (SA). Male L_inf in GS ranges from 5.789 (SA) to 7.18300 (GA), with K ranging from 0.58300 (GA) to 0.71300 (SA). The mean values across all strata are L_inf Female 5.98775, K Female 0.728, L_inf Male 6.504625, and K Male 0.74075. These results indicate a variability in parameter estimates between methods and strata, highlighting the need for further refinement and spatial consideration in life history parameter estimation. Figure \@ref(fig:curvevb) display the growth trajectories of krill for both females (top panels) and males (bottom panels) across four strata. The left panels illustrate growth curves derived from the GA algorithm, while the right panels show those from the SA algorithm. These visualizations underscore the variability in growth patterns between strata and between estimation methods.
 
-Regarding Natural mortality the Table \@ref(fig:Mtablef) and \@ref(fig:Mtablem) presents estimated natural mortality (M) for female krill across four strata: EI, BS, GS, and SSWI, using different methods. Alverson and Carney (1975) provide estimates ranging from 0.711 in BS to 0.945 in SSWI. Hoenig's (1983) Joint Equation gives consistent estimates of 0.869 across all strata, while his Fish Equation method gives consistent estimates of 0.847. Pauly's (1980) Length Equation shows the highest variability, with estimates from 1.045 in BS to 0.773 in SSWI. Rikhter and Efanov (1976) provide uniform estimates of 0.768 across all strata. The mean natural mortality values for EI, BS, GS, and SSWI are 0.8474, 0.848, 0.8464, and 0.8404, respectively. This variability underscores the importance of method selection in estimating krill natural mortality. To male, Alverson and Carney (1975) provide estimates ranging from 0.656 in BS to 0.863 in GS. Hoenig's (1983) Joint Equation gives consistent estimates of 0.869 across all strata, while his Fish Equation method also gives consistent estimates of 0.847. Pauly's (1980) Length Equation shows the highest variability, with estimates from 1.111 in BS to 0.842 in GS. Rikhter and Efanov (1976) provide uniform estimates of 0.768 across all strata. The mean natural mortality values for EI, BS, GS, and SSWI are 0.8376, 0.8502, 0.8378, and 0.8424, respectively (Figure \@ref(fig:Mgra)).
+The Table \@ref(fig:tablegp) presents life history parameters for krill across different strata using two estimation algorithms, Genetic Algoritm and Simulated Annealing.  For the BS stratum, the GA algorithm estimates \( L_\infty \) for females at 6.603 and \( K\) at 0.385, while for males, \( L_\infty \) is 6.026 and \( K\) is 0.686. The SA algorithm provides slightly different values: \( L_\infty \) for females is 5.924 and \( K\) is 0.831, whereas \( L_\infty \) for males is 5.594 and \( K\) is 0.604. In the EI stratum, the GA algorithm estimates \( L_\infty \) for females at 5.945 and \( K\) at 0.616, with male estimates being \( L_\infty \) of 6.902 and \( K\) of 0.799. The SA algorithm shows higher variability, with \( L_\infty \) for females at 5.585 and \( K\) at 0.958, and for males, \( L_\infty \) at 7.314 and \( K\) at 0.941. For the SSWI stratum, the GA algorithm results in \( L_\infty \) for females at 6.606 and \( K\) at 0.523, while males have \( L_\infty \) at 6.470 and \( K\) at 0.646. The SA algorithm estimates \( L_\infty \) for females at 6.003 and \( K\) at 0.659, and for males, \( L_\infty \) at 6.419 and \( K\) at 0.768. In the GS stratum, the GA algorithm provides \( L_\infty \) for females at 6.011 and \( K\) at 0.692, with male estimates of \( L_\infty \) at 6.441 and \( K\) at 0.871. The SA algorithm estimates \( L_\infty \) for females at 5.660 and \( K\) at 0.905, and for males, \( L_\infty \) at 5.789 and \( K\) at 0.713. The mean estimates across all strata for both algorithms are \( L_\infty \) for females at 6.042125 and \( K\) at 0.696125, while for males, \( L_\infty \) is 6.369375 and \( K\) is 0.7535 (Figure \@ref(fig:tablegp)).
 
-These results indicate variability in natural mortality estimates for male krill depending on the method used, similar to the female estimates. While there are no statistically significant differences between the M values of the strata (Suppl. Mat), small changes in these parameters can have significant impacts on the estimation of krill population variables.
+
+
+Values estimated to natural mortality rates (\(M\))) by strata for male and female subjects, derived from bioanalytical method.  For males, the estimates of M across four strata (EI, BS, GS, SSWI) are derived from several studies: Alverson and Carney method report values of 0.673, 0.767, 0.618, and 0.803 respectively. Hoenig (1983) provides two sets of estimates, one using a joint equation and another using a fish equation, both yielding consistent values across strata (0.869 for the joint equation and 0.847 for the fish equation). Pauly length equation presents higher variability, with values of 1.046 (EI), 0.983 (BS), 1.128 (GS), and 0.927 (SSWI). Rikhter and Efanov method offer uniform estimates of 0.768 across all strata. The mean estimates for each stratum are 0.8406 (EI), 0.8468 (BS), 0.846 (GS), and 0.8428 (SSWI). For females, Alverson and Carney method provide estimates of 0.831 (EI), 1.071 (BS), 0.762 (GS), and 0.922 (SSWI). Hoenig's (1983) joint and fish equations yield identical values for each stratum, at 0.869 and 0.847 respectively. Pauly method shows estimates of 0.920 (EI), 0.657 (BS), 0.989 (GS), and 0.803 (SSWI). Rikhter and Efanov present a uniform value of 0.768 across all strata. The mean estimates for females are 0.847 (EI), 0.8424 (BS), 0.847 (GS), and 0.8418 (SSWI).(Figure \@ref(fig:Mgra)). 
+
+
 
 \newpage
 
 # CONCLUSION
 
-In this work we conducted an analysis to estimate the life history parameters of krill, considering spatial heterogeneity along the Western Antarctic Peninsula (WAP) in subarea 48.1. This study has two main objectives. The first is to update the estimation of parameters such as \(L_\infty\), \(K\), and \(M\) through ad hoc methods for marine populations where age estimation is difficult, such as krill. In this case, we used methods such as Modal Progression Analysis with ELEFAN and bioanalogical methods. Furthermore, while these parameters differ from previously estimated values for krill, we consider that these methodologies can be improved, for example, by using non-linear methods to account for temporal and environmental variability, among others. Secondly, this work aims to elevate the debate regarding the importance of life history parameters in any analysis of krill population variable estimation through models currently used by CCAMLR.
+In this work we conducted an analysis to estimate the life history parameters of krill along the Western Antarctic Peninsula (WAP) in subarea 48.1. and indicate a variability in parameter estimates between strata, highlighting the need for further refinement and spatial consideration in this kind to critical component in dynamics population. This study has two main objectives. The first is to update the estimation of parameters such as \(L_\infty\), \(K\), and \(M\) through ad-hoc methods for marine populations where age estimation is difficult, such as krill. In this case, we used methods such as Modal Progression Analysis with ELEFAN and bioanalytical methods. Furthermore, while these parameters differ from previously estimated values for krill, we consider that these methodologies can be improved, for example, by using non-linear methods to account for temporal and environmental variability, among others. Secondly, this work aims to elevate the debate regarding the importance of life history parameters in any analysis of krill population variable estimation through models currently used by CCAMLR.
 
 
 
@@ -259,29 +253,19 @@ knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-13-1.jpeg',
 
 
 
-```{r tablegp,  out.width='80%', fig.show='hold', fig.cap="Table with von Bertalanffy parametres by sex, strata and method"}
+```{r tablegp,  out.width='80%', fig.show='hold', fig.cap="Table with von Bertalanffy parameters by sex, strata and method"}
 knitr::include_graphics('index_files/figure-html/result_GrowthParam.png')
 ```
 
 
 
 ```{r curvevb, fig.show='hold', fig.cap="Theoretical von Bertalanffy growth curves for krill by stratum and sex with calculated growth parameters (L inf and K)."}
-knitr::include_graphics('index_files/figure-html/unnamed-chunk-25-1.jpeg')
-```
-
-\newpage
-```{r Mtablem, out.width='80%', fig.cap="Natural Mortality estimate to male by strata and method"}
-knitr::include_graphics('index_files/figure-html/N_M_Male.png')
-```
-
-
-```{r Mtablef,  out.width='80%', fig.cap="Natural Mortality estimate to female by strata, sex and method"}
-knitr::include_graphics('index_files/figure-html/N_M_Female.png')
+knitr::include_graphics('index_files/figure-html/unnamed-chunk-27-1.jpeg')
 ```
 
 
 \newpage
-```{r Mgra, out.width='100%', fig.cap="Natural Mortality estimate by strata and method"}
+```{r Mgra, out.width='100%', fig.cap="Natural Mortality estimate by sex, strata and method"}
 knitr::include_graphics('index_files/figure-html/unnamed-chunk-35-1.jpeg')
 ```
 
