--- a/WP_Krill_Param.Rmd
+++ b/WP_Krill_Param.Rmd
@@ -1,12 +1,10 @@
 ---
-title: "Derive growth parameters and natural mortality rates for krill considering spatial heterogeneity in Subarea 48.1 of the Western Antarctic Peninsula"
-subtitle: "Working Paper to be submitted in a CCAMLR WG- 2024"
+title: "Derive growth parameters and natural mortality rates for krill considering spatial heterogeneity in Subarea 48.1"
 author:
-  - Mardones Mauricio^[Universidad de Magallanes, mamardon@umag.cl]
-  - César Cárdenas^[Instituto Antártico Chileno, Milenio Base]
-  - Lucas Krüger ^[Instituto Antártico Chileno, Milenio Base]
-  - Francisco Santa Cruz ^[Instituto Antártico Chileno, Universidad de Magallanes]
-date:  "`r format(Sys.time(), '%d %B, %Y')`"
+  - Mardones Mauricio^[Universidad de Magallanes, mamardon@umag.cl, Millennium Institute Biodiversity of Antarctic and Subantarctic Ecosystems (Base), Centro IDEAL, UaCh]
+  - César Cárdenas^[Instituto Antártico Chileno, Millennium Institute Biodiversity of Antarctic and Subantarctic Ecosystems (Base)]
+  - Lucas Krüger ^[Instituto Antártico Chileno, Millennium Institute Biodiversity of Antarctic and Subantarctic Ecosystems (Base)]
+  - Francisco Santa Cruz ^[Instituto Antártico Chileno, Universidad de Magallanes, Millennium Institute Biodiversity of Antarctic and Subantarctic Ecosystems (Base)]
 output:
   bookdown::pdf_document2:
     number_sections: false
@@ -23,8 +21,7 @@ header-includes:
 - \usepackage{lscape}
 ---
 \newpage
-\tableofcontents
-\newpage
+
 
 
 ```{r setup1, echo=FALSE}
@@ -62,7 +59,7 @@ library(ggthemes)
 
 # ABSTRACT
 
-The Western Antarctic Peninsula ecosystem plays a critical role in the life of Antarctic krill (*Euphausia superba*). Recent environmental changes and escalating exploitation in this area have led to alterations in krill population structure, calling for a review of the management approach. In this study, we derive growth parameters and natural mortality rates for krill while considering spatial heterogeneity in the Western Antarctic Peninsula. We use Modal Progression Analysis (MPA) to estimate \(L_\infty\) and \(K\) for each management stratum inside subarea 48.1. Subsequently, we calculate natural mortality \(M\) for each stratum using bioanalytical methods. This study identified variations in krill's life history traits across different locations. These findings can be incorporated into management strategies and recommendations when analyzing population dynamics models for krill. This study underscores the importance of accounting for spatial heterogeneity in estimating krill life cycle parameters, which can significantly impact assessment models used to provide management recommendations to CCAMLR.
+The Western Antarctic Peninsula ecosystem plays a critical role in the cycle life of Antarctic krill (*Euphausia superba*). Recent environmental changes and increasing exploitation in this area have led to alterations in the structure of the krill population, calling for a review of the management approach. In this study, we derive growth parameters and natural mortality rates for krill while considering spatial heterogeneity in the Western Antarctic Peninsula. We use Modal Progression Analysis (MPA) to estimate \(L_\infty\) and \(K\) for each management stratum in Subarea 48.1. Subsequently, we calculated natural mortality \(M\) for each stratum using bioanalytical methods. This study identified variations in krill's life history traits across different locations. These findings can be incorporated into management strategies and recommendations when analyzing population dynamics models for krill. This study underscores the importance of accounting for spatial heterogeneity in estimating krill life cycle parameters, which can significantly impact assessment models used to provide management recommendations to CCAMLR.
 
 
 
@@ -72,7 +69,7 @@ The Western Antarctic Peninsula ecosystem plays a critical role in the life of A
 
 # INTRODUCTION
 
-Antarctic Krill (*Euphausia superba*, Krill hereafter) is a particularly important organism in the Antarctic ecosystem. In recent years, environmental changes coupled with increasing exploitation causing shifts in its population structure and spatio-temporal dynamics [@Atkinson2022; @McBride2021; @Perry2020], has drawn attention to the management of the resource as a central axis for the sustainability of its populations. To this end, various approaches have emerged aiming to provide or make recommendations for management based on models, such as GRYM [@Maschette2020] and integrated models [@Wang2021]. A key aspect in the analysis of populations and their dynamics is having accurate and updated estimates of the life history parameters of the species being evaluated, for instance, growth and natural mortality components [@Clark1999; @Perreault2021; @Mannini2020]. Considering the importance of those parameters to exploited species population dynamics, several approaches have been taken to determine them in krill [@Melvin2018; @Pakhomov1995a; @Reid2010a; @Siegel2000b; @Rosenberg1986]. However, these estimates have been global and do not consider the particularity and spatial heterogeneity of krill in the main exploitation areas along the Western Antarctic Peninsula (WAP). In order to incorporate spatial heterogeneity in the population model of Krill, we employed Modal Progression Analysis (MPA), one of the most well-known methods for parameter estimation in individuals or species for which it is difficult to determine ages, such as invertebrates [@Gayanilo1997; @Gayanilo2005; @Sparre1999]. We  used MPA to estimate growth coefficient \(K\) , the asymptotic length \(L_\infty\) for each of the management strata recommended by WG-ASAM e-group on Krill biomass estimates from acoustic surveys [@Dornam2021]. After analyzing and estimating the growth parameters, we calculated natural mortality for each of the strata using biological methods using the `TropFishR` package [@Mildenberger2017]. In both cases and analyses, we considered the differences between males and females. We used the individual krill lengths compositions of the fishery monitoring data, for each of the strata inside WAP where krill fishery occurs. On one hand, we aim to update the parameter estimates using methods commonly known in fisheries science and, on the other hand, to rise a debate regarding the vitality of research in life history parameters in krill taking into account spatial heterogeneity and its potential impact on estimation on population variables from assessment models currently used to provide recommendations to CCAMLR.
+Antarctic krill (*Euphausia superba*, krill hereafter) is a particularly important organism in the Antarctic ecosystem. In recent years, environmental changes coupled with increasing exploitation causing shifts in its population structure and spatio-temporal dynamics [@Atkinson2022; @McBride2021; @Perry2020], has drawn attention to the management of the resource as a central axis for the sustainability of its populations. To this end, various approaches have emerged aiming to provide or make recommendations for management based on models, such as GRYM [@Maschette2020] and integrated models [@Wang2021]. A key aspect in the analysis of populations and their dynamics is having accurate and updated estimates of the life history parameters of the species being evaluated, for instance, growth and natural mortality components [@Clark1999; @Perreault2021; @Mannini2020]. Considering the importance of those parameters to exploited species population dynamics, several approaches have been taken to determine them in krill [@Melvin2018; @Pakhomov1995a; @Reid2010a; @Siegel2000b; @Rosenberg1986]. However, these estimates have been global and do not consider the particularity and spatial heterogeneity of krill in the main exploitation areas along the Western Antarctic Peninsula (WAP). In order to incorporate spatial heterogeneity in the population model of Krill, we estimated life history parameters by strata in 48.1 Subarea through Modal Progression Analysis (MPA) and  bioanalytical methods, which are among the well-known methods for parameter estimation in individuals or species for which it is difficult to determine ages, such as invertebrates [@Gayanilo1997; @Gayanilo2005; @Sparre1999]. Estimation of  growth coefficient \(K\), the asymptotic length \(L_\infty\) and natural mortality \(M\) were performed using the `TropFishR` package [@Mildenberger2017]. On one hand, we aim to update the parameter estimates using methods commonly known in fisheries science and, on the other hand, to rise a debate regarding the vitality of research in life history parameters in krill taking into account spatial heterogeneity and its potential impact on estimation on population variables from assessment models currently used to provide recommendations to CCAMLR.
 
 \newpage
 
@@ -80,16 +77,16 @@ Antarctic Krill (*Euphausia superba*, Krill hereafter) is a particularly importa
 
 ## Study area
 
-The study area focused on subarea 48.1, which is one of the sectors where today the largest amount of krill fishing is concentrated [@McBride2021; @Atkinson2022]. In order to have a finest spatial definition of krill dynamics population, we analyzed the differences between the management strata defined in WG-EMM-2021/05 Rev. [@Dornam2021], namely Bransfield Strait, Elephant Island, Gerlache Strait, Joinville Island and South Shetland Islands West (hereafter BS, EI, GS, JOIN and SSIW respectively) (Figure \@ref(fig:mapa))
+The study focused on 48.1 Subarea, which is one of the sectors where today the largest amount of krill fishing is concentrated [@McBride2021; @Atkinson2022]. In order to have a finest spatial definition of krill dynamics population, we analyzed the differences between the management strata defined in WG-EMM-2021/05 Rev. [@Dornam2021], namely Bransfield Strait, Elephant Island, Gerlache Strait, Joinville Island and South Shetland Islands West (Figure \@ref(fig:mapa))
 
 
 ## Monitoring Data (SISO Program)
 
-For this analysis, data from the monitoring of the krill fishery were used, which have been systematically collected on board fishing vessels by the CCAMLR SISO (Scheme of International Scientific Observation) program. Krill length compositions were obtained from the entire area 48.1, which was combined in each management stratum defined at 2.1 section (Figure \@ref(fig:hist)). We used this kind of information because length composition collected from fishery cover all range of sizes in krill populations. The information gaps was calculating trough proportion of records per year and per stratum in a table. We left out just JOIN because there is not enough data for the analysis (Suppl Mat).
+For this analysis, data from the monitoring of the krill fishery were used, which have been systematically collected on board fishing vessels by the CCAMLR SISO (Scheme of International Scientific Observation) program. Krill length compositions were obtained from the entire Subarea 48.1, which was combined in each management stratum defined at 2.1 section (Figure \@ref(fig:hist)). We used this kind of information because length composition collected from the fishery cover all size ranges in krill populations. The information gaps was calculating trough proportion of records per year and per stratum in a table. We left out just JOIN because there is not enough data for the analysis (Suppl Mat).
 
 ## Growth Parameters Estimation  (\(L_\infty\) and \(K\))
 
-To estimate growth parameters in the krill population in WAP we used Modal progression analysis (MPA). MPA is a technique that tracks the changes in the length frequency distribution of a marine population over time. This method identifies distinct modes (peaks) in the size distribution, which represent cohorts of individuals that were born at the same time.  By following these cohorts through subsequent sampling periods, it is possible to infer growth rates and other key biological parameters. The steps  to calculate parameters are: (1) Gather length-frequency data from the population at different times, this involves measuring the sizes of individuals in the population and recording the frequency of each size class; (2) Identify and track the distinct peaks (modes) in the size-frequency distributions; these peaks represent groups of individuals of similar age,  this component was calculated using `mixR` package [@Yu2021]; (3) follow the identified modes over time to see how they shift; the movement of these modes over successive sampling periods reflects the growth of the individuals in those cohorts; (4) Fit the observed shifts in modes to a growth model, such as the von Bertalanffy growth function (VBGF); this involves estimating parameters such as the (\(K\)) and (\(L_\infty\)), and the initial size at age zero (\(L_0\); (5) Use the fitted model to derive growth parameters that describe how individuals in the population grow over time. All this process about estimation of growth parameters was based on Electronic LEngth Frequency ANalysis (ELEFAN). ELEFAN is a widely used software tool that applies modal progression analysis to estimate growth parameters based on a seminal book from Pauly & Morgan (1987). It automates the process of identifying and tracking modes in length-frequency data, making the analysis more efficient and accurate. ELEFAN uses optimization techniques to find the best set of growth parameters that minimize the difference between the observed and expected sizes of individuals in each cohort over time. For krill, we used two techniques; `ELEFAN GA` (Electronic LEngth Frequency ANalysis with Genetic Algorithm) used for estimating growth parameters and `ELEFAN SA` (Electronic LEngth Frequency ANalysis with Simulated Annealing) for estimating growth parameters. These techniques allow for greater certainty in the estimation and enable comparisons between them.
+To estimate growth parameters in the krill population in WAP we used Modal progression analysis (MPA). MPA is a technique that tracks the changes in the length frequency distribution of a marine population over time. This method identifies distinct modes (peaks) in the size distribution, which represent cohorts of individuals that were born at the same time.  By following these cohorts through subsequent sampling periods, it is possible to infer growth rates and other key biological parameters. The steps  to calculate parameters are: (1) Gather length-frequency data from the population at different times, this involves measuring the sizes of individuals in the population and recording the frequency of each size class; (2) Identify and track the distinct peaks (modes) in the size-frequency distributions; these peaks represent groups of individuals of similar age,  this component was calculated using `mixR` package [@Yu2021]; (3) follow the identified modes over time to see how they shift; the movement of these modes over successive sampling periods reflects the growth of the individuals in those cohorts; (4) Fit the observed shifts in modes to a growth model, such as the von Bertalanffy growth function (VBGF); this involves estimating parameters such as the (\(K\)) and (\(L_\infty\)), and the initial size at age zero (\(L_0\); (5) Use the fitted model to derive growth parameters that describe how individuals in the population grow over time. All this process about estimation of growth parameters was based on Electronic LEngth Frequency ANalysis (ELEFAN). ELEFAN is a widely used software tool that applies modal progression analysis to estimate growth parameters based on a seminal book from Pauly & Morgan (1987). It automates the process of identifying and tracking modes in length-frequency data, making the analysis more efficient and accurate. ELEFAN uses optimization techniques to find the best set of growth parameters that minimize the difference between the observed and expected sizes of individuals in each cohort over time. For krill, we used two techniques; Electronic LEngth Frequency ANalysis with Genetic Algorithm (`GA`) used for estimating growth parameters and Electronic LEngth Frequency ANalysis with Simulated Annealing (`SA`) for estimating growth parameters. These techniques allow for greater certainty in the estimation and enable comparisons between them.
 
 
 The von Bertalanffy growth function, which is often used in modal progression analysis and implemented in ELEFAN, is expressed as:
@@ -124,7 +121,7 @@ where:
 
 ## Natural Mortality Estimation
 
-Fish populations rely on the natural mortality rate (M) to model their dynamics. This rate represents the portion of fish dying annually from non-fishing causes [@Mannini2020] . Both the perceived stock status and the associated fisheries advice rely greatly on the chosen value of M. Stock assessment models typically need an external estimate of the natural mortality rate (M), which is generally assumed to be constant across all ages and years within the model. While this assumption of a fixed M can significantly oversimplify reality, model diagnostics, such as profile likelihoods that could elucidate the impact of M on model fit, are often not utilized in practice [@Perreault2021]. Estimating natural mortality (M) is a crucial aspect of fisheries science. Several bioanalogical methods have been developed, each based on empirical data and various life history parameters [@Mannini2020]. In this analysis, we use four appropriate methods regarding data availability and life story in krill.
+Fish populations rely on the natural mortality rate (M) to model their dynamics. This rate represents the portion of fish dying annually from non-fishing causes [@Mannini2020] . Both the perceived stock status and the associated fisheries advice rely greatly on the chosen value of M. Stock assessment models typically need an external estimate of the natural mortality rate (M), which is generally assumed to be constant across all ages and years within the model. While this assumption of a fixed M can significantly oversimplify reality, model diagnostics, such as profile likelihoods that could elucidate the impact of M on model fit, are often not utilized in practice [@Perreault2021]. Estimating natural mortality (M) is a crucial aspect of fisheries science. Several bioanalytical methods have been developed, each based on empirical data and various life history parameters [@Mannini2020]. In this analysis, we use four appropriate methods regarding data availability and life story in krill.
 
 
 @Pauly1980a estimates natural mortality based on the von Bertalanffy growth parameters, ambient temperature, and the asymptotic length (\(L_\infty\)). The formula is given by:
@@ -159,14 +156,14 @@ All these methods, this mean growth parameters estimation and bioanalytical mode
 
 # RESULTS
 
-Figure \@ref(fig:comps) shows the distribution of krill size by age group for four different strata using `mixR`. We found different modal compositions by strata, that was included in estimation parameters models.: GERLACHE, ELEPHANT ISLAND, BRANSFIELD STRAIT, and SSWI by panel. The x-axis of each panel shows the krill size in millimeters, and the y-axis shows the probability density. The panels show the distribution by age group in different colors for male (Figure \@ref(fig:cohortmale), \@ref(fig:incremale)) and female (Figure \@ref(fig:cohortfemale), \@ref(fig:incremfemale)). Younger krill are generally smaller than older krill. The distribution of krill size also varies by strata. For example, the krill in GERLACHE tend to be larger than the krill in SSWI. 
+The distribution of krill size by age group for four different strata using `mixR` is show in Figure \@ref(fig:comps). We found different modal compositions by strata that were included in estimation parameters models: Bransfield St., Elephant Island, Gerlache Strait, Joinville Island and South Shetland Islands West by panel. The x-axis of each panel shows the krill size in millimeters, and the y-axis shows the probability density for male (Figure \@ref(fig:cohortmale), \@ref(fig:incremale)) and female (\@ref(fig:cohortfemale), \@ref(fig:incremfemale)). The distribution of krill size also varies by strata. For example, the krill in Gerlache tend to be larger than the krill in SSWI. 
 
 
-The Table \@ref(fig:tablegp) presents life history parameters for krill across different strata using two estimation algorithms, Genetic Algoritm and Simulated Annealing.  For the BS stratum, the GA algorithm estimates \( L_\infty \) for females at 6.603 and \( K\) at 0.385, while for males, \( L_\infty \) is 6.026 and \( K\) is 0.686. The SA algorithm provides slightly different values: \( L_\infty \) for females is 5.924 and \( K\) is 0.831, whereas \( L_\infty \) for males is 5.594 and \( K\) is 0.604. In the EI stratum, the GA algorithm estimates \( L_\infty \) for females at 5.945 and \( K\) at 0.616, with male estimates being \( L_\infty \) of 6.902 and \( K\) of 0.799. The SA algorithm shows higher variability, with \( L_\infty \) for females at 5.585 and \( K\) at 0.958, and for males, \( L_\infty \) at 7.314 and \( K\) at 0.941. For the SSWI stratum, the GA algorithm results in \( L_\infty \) for females at 6.606 and \( K\) at 0.523, while males have \( L_\infty \) at 6.470 and \( K\) at 0.646. The SA algorithm estimates \( L_\infty \) for females at 6.003 and \( K\) at 0.659, and for males, \( L_\infty \) at 6.419 and \( K\) at 0.768. In the GS stratum, the GA algorithm provides \( L_\infty \) for females at 6.011 and \( K\) at 0.692, with male estimates of \( L_\infty \) at 6.441 and \( K\) at 0.871. The SA algorithm estimates \( L_\infty \) for females at 5.660 and \( K\) at 0.905, and for males, \( L_\infty \) at 5.789 and \( K\) at 0.713. The mean estimates across all strata for both algorithms are \( L_\infty \) for females at 6.042125 and \( K\) at 0.696125, while for males, \( L_\infty \) is 6.369375 and \( K\) is 0.7535. Growth curve regarding parametres estimated is show in Figure \@ref(fig:curvevb).
+The mean estimates across all strata for both algorithms are \( L_\infty \) for females at 6.042125 and \( K\) at 0.696125, while for males, \( L_\infty \) is 6.369375 and \( K\) is 0.7535.  For the BS stratum, the GA algorithm estimates \( L_\infty \) for females at 6.603 and \( K\) at 0.385, while for males, \( L_\infty \) is 6.026 and \( K\) is 0.686. The SA algorithm provides slightly different values: \( L_\infty \) for females is 5.924 and \( K\) is 0.831, whereas \( L_\infty \) for males is 5.594 and \( K\) is 0.604. In the EI stratum, the GA algorithm estimates \( L_\infty \) for females at 5.945 and \( K\) at 0.616, with male estimates being \( L_\infty \) of 6.902 and \( K\) of 0.799. The SA algorithm shows higher variability, with \( L_\infty \) for females at 5.585 and \( K\) at 0.958, and for males, \( L_\infty \) at 7.314 and \( K\) at 0.941. For the SSWI stratum, the GA algorithm results in \( L_\infty \) for females at 6.606 and \( K\) at 0.523, while males have \( L_\infty \) at 6.470 and \( K\) at 0.646. The SA algorithm estimates \( L_\infty \) for females at 6.003 and \( K\) at 0.659, and for males, \( L_\infty \) at 6.419 and \( K\) at 0.768. In the GS stratum, the GA algorithm provides \( L_\infty \) for females at 6.011 and \( K\) at 0.692, with male estimates of \( L_\infty \) at 6.441 and \( K\) at 0.871. The SA algorithm estimates \( L_\infty \) for females at 5.660 and \( K\) at 0.905, and for males, \( L_\infty \) at 5.789 and \( K\) at 0.713. Theorical growth curve regarding parameters estimated is shown in Figure \@ref(fig:curvevb) and displayed in Table \@ref(fig:tablegp). 
 
 
 
-Values estimated to natural mortality rates (\(M\))) by strata for male and female subjects, derived from bioanalytical method.  For males, the estimates of M across four strata (EI, BS, GS, SSWI) are derived from several studies: Alverson and Carney method report values of 0.673, 0.767, 0.618, and 0.803 respectively. Hoenig (1983) provides two sets of estimates, one using a joint equation and another using a fish equation, both yielding consistent values across strata (0.869 for the joint equation and 0.847 for the fish equation). Pauly length equation presents higher variability, with values of 1.046 (EI), 0.983 (BS), 1.128 (GS), and 0.927 (SSWI). Rikhter and Efanov method offer uniform estimates of 0.768 across all strata. The mean estimates for each stratum are 0.8406 (EI), 0.8468 (BS), 0.846 (GS), and 0.8428 (SSWI). For females, Alverson and Carney method provide estimates of 0.831 (EI), 1.071 (BS), 0.762 (GS), and 0.922 (SSWI). Hoenig's (1983) joint and fish equations yield identical values for each stratum, at 0.869 and 0.847 respectively. Pauly method shows estimates of 0.920 (EI), 0.657 (BS), 0.989 (GS), and 0.803 (SSWI). Rikhter and Efanov present a uniform value of 0.768 across all strata. The mean estimates for females are 0.847 (EI), 0.8424 (BS), 0.847 (GS), and 0.8418 (SSWI).(Figure \@ref(fig:Mgra)). 
+Natural mortality mean estimates for females are 0.847 (EI), 0.8424 (BS), 0.847 (GS), and 0.8418. For males, the estimates of M across four strata (EI, BS, GS, SSWI) are derived from several studies: Alverson and Carney method report values of 0.673, 0.767, 0.618, and 0.803 respectively. Hoenig (1983) provides two sets of estimates, one using a joint equation and another using a fish equation, both yielding consistent values across strata (0.869 for the joint equation and 0.847 for the fish equation). Pauly length equation presents higher variability, with values of 1.046 (EI), 0.983 (BS), 1.128 (GS), and 0.927 (SSWI). Rikhter and Efanov method offer uniform estimates of 0.768 across all strata. The mean estimates for each stratum are 0.8406 (EI), 0.8468 (BS), 0.846 (GS), and 0.8428 (SSWI). For females, Alverson and Carney method provide estimates of 0.831 (EI), 1.071 (BS), 0.762 (GS), and 0.922 (SSWI). Hoenig's (1983) joint and fish equations yield identical values for each stratum, at 0.869 and 0.847 respectively. Pauly method shows estimates of 0.920 (EI), 0.657 (BS), 0.989 (GS), and 0.803 (SSWI). Rikhter and Efanov present a uniform value of 0.768 across all strata.  (SSWI).(Figure \@ref(fig:Mgra)). 
 
 
 
@@ -174,37 +171,36 @@ Values estimated to natural mortality rates (\(M\))) by strata for male and fema
 
 # CONCLUSION
 
-In this work we conducted an analysis to estimate the life history parameters of krill along the Western Antarctic Peninsula (WAP) in subarea 48.1. and indicate a variability in parameter estimates between strata, highlighting the need for further refinement and spatial consideration in this kind to critical component in dynamics population. This study has two main objectives. The first is to update the estimation of parameters such as \(L_\infty\), \(K\), and \(M\) through ad-hoc methods for marine populations where age estimation is difficult, such as krill. In this case, we used methods such as Modal Progression Analysis with ELEFAN and bioanalytical methods. Furthermore, while these parameters differ from previously estimated values for krill, we consider that these methodologies can be improved, for example, by using non-linear methods to account for temporal and environmental variability, among others. Secondly, this work aims to elevate the debate regarding the importance of life history parameters in any analysis of krill population variable estimation through models currently used by CCAMLR.
-
+In this work we conducted an analysis to estimate the life history parameters of krill along the Western Antarctic Peninsula (WAP) in subarea 48.1 showing variability in parameter estimates between strata, highlighting the need for further refinement and spatial consideration for this kind of critical component in population dynamics. The first is to update the estimation of parameters such as \(L_\infty\), \(K\), and \(M\) through ad-hoc methods for marine populations where age estimation is difficult, such as krill. In this case, we used methods such as Modal Progression Analysis with ELEFAN and bioanalytical methods. Furthermore, while these parameters differ from previously estimated values for krill, we consider that these methodologies can be improved, for example, by using non-linear methods to account for temporal and environmental variability, among others. We also aimed to stimulate the debate on the significance of life history parameters in estimating, modeling, and predicting key krill population variables such as recruitment, spawning biomass, and fishing mortality through models currently used by CCAMLR.  Understanding how life history traits affect populations is key to provide accurate assessments and sustainable management of krill. By addressing these gaps and incorporating constructive feedback, we aim to improve the robustness of methods and their application in krill fisheries management. The ultimate goal is to advance our understanding of krill dynamics and contribute to more effective management and conservation strategies in CCAMLR. 
 
 
 \newpage
 # FIGURES AND TABLES
 
-```{r mapa, out.width='130%', fig.cap="Subarea 48.1 and management strata considered in the spatio-temporal analysis of intrinsic productivity of Krill (BS=Bransfield Strait, EI= Elephant Island, GS= Gerlache strait, JOIN= Joinville Island, SSWI= South West)"}
+```{r mapa, out.width='130%', fig.cap="Subarea 48.1 and management strata considered in the spatio-temporal analysis of intrinsic productivity of krill (BS=Bransfield Strait, EI= Elephant Island, GS= Gerlache strait, JOIN= Joinville Island, SSWI= South West)"}
 knitr::include_graphics('index_files/figure-html/maptest-1.jpeg')
 ```
 
 
 
 
-```{r hist, out.width='100%', fig.cap="Sizes compositions from SISO program monitoring krill fishery by strata (BS=Bransfield Strait, EI= Elephant Island, GS= Gerlache strait, JOIN= Joinville Island, SSWI= South West). Red line represent recruit size"}
-knitr::include_graphics('index_files/figure-html/unnamed-chunk-7-1.jpeg')
+```{r hist, out.width='90%', fig.cap="Sizes compositions from SISO program monitoring krill fishery by strata (BS=Bransfield Strait, EI= Elephant Island, GS= Gerlache Strait, JOIN= Joinville Island, SSWI= South West). Red line represents recruit size in 36 mm."}
+knitr::include_graphics('index_files/figure-html/lengcom-1.jpeg')
 ```
 
 
-```{r comps, out.width='90%', fig.show='hold', fig.cap="Modals components by strata"}
+```{r comps, out.width='100%', fig.show='hold', fig.cap="Modals components by strata. The x-axis of each panel shows the krill size in millimeters, and the y-axis shows the probability density. The panels show the distribution by age group in different colors for male."}
 knitr::include_graphics('index_files/figure-html/components.png')
 ```
 
 
 \begin{landscape}
 
-```{r cohortmale, out.width='40%', fig.show='hold', fig.cap="Length frequency data and growth curves to male by strata. Lines show estimated (blue) and true (grey) growth curves plotted through the length frequency data. The dashed darkblue and dotted lightblue curves represent the curves of the ELEFAN SA"}
+```{r cohortmale, out.width='40%', fig.show='hold', fig.cap="Length frequency data and growth of the ELEFAN Simulated Annealing to male"}
 par(mfrow=c(2,2))
-knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-10-1.jpeg',
+knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-9-1.jpeg',
                         'index_files/figure-html/unnamed-chunk-10-2.jpeg',
-                        'index_files/figure-html/unnamed-chunk-10-3.jpeg',
+                        'index_files/figure-html/unnamed-chunk-9-3.jpeg',
                         'index_files/figure-html/unnamed-chunk-10-4.jpeg'))
 ```
 
@@ -214,11 +210,11 @@ knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-10-1.jpeg',
 
 \begin{landscape}
 
-```{r incremale, out.width='40%', fig.show='hold', fig.cap="Growth increments to male by strata"}
+```{r incremale, out.width='40%', fig.show='hold', fig.cap="Growth increments to male by strata. Lines show estimated (blue) and true (grey) growth curves plotted through the length frequency data. The dashed dark blue and dotted light blue curves represent the curves of the ELEFAN Simulated Annealing."}
 par(mfrow=c(2,2))
-knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-12-1.jpeg',
+knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-14-1.jpeg',
                         'index_files/figure-html/unnamed-chunk-12-2.jpeg',
-                        'index_files/figure-html/unnamed-chunk-12-3.jpeg',
+                        'index_files/figure-html/unnamed-chunk-15-3.jpeg',
                         'index_files/figure-html/unnamed-chunk-12-4.jpeg'))
 ```
 
@@ -226,11 +222,11 @@ knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-12-1.jpeg',
 
 \begin{landscape}
 
-```{r cohortfemale, out.width='40%', fig.show='hold', fig.cap="Length frequency data and growth curves to female. Lines show estimated (blue) and true (grey) growth curves plotted through the length frequency data. The dashed darkblue and dotted lightblue curves represent the curves of the ELEFAN SA"}
+```{r cohortfemale, out.width='40%', fig.show='hold', fig.cap="Length frequency data and growth of the ELEFAN Genetic Algorithm to female"}
 par(mfrow=c(2,2))
-knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-10-5.jpeg',
+knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-9-5.jpeg',
                         'index_files/figure-html/unnamed-chunk-10-6.jpeg',
-                        'index_files/figure-html/unnamed-chunk-10-7.jpeg',
+                        'index_files/figure-html/unnamed-chunk-9-7.jpeg',
                         'index_files/figure-html/unnamed-chunk-10-8.jpeg'))
 ```
 
@@ -240,11 +236,11 @@ knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-10-5.jpeg',
 
 \begin{landscape}
 
-```{r incremfemale, out.width='40%', fig.show='hold', fig.cap="Growth increments to female by strata"}
+```{r incremfemale, out.width='40%', fig.show='hold', fig.cap="Growth increments to female by strata. Lines show estimated (blue) and true (grey) growth curves plotted through the length frequency data. The dashed dark blue and dotted light blue curves represent the curves of the ELEFAN Genetic Algorithm."}
 par(mfrow=c(2,2))
-knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-13-1.jpeg',
+knitr::include_graphics(c('index_files/figure-html/unnamed-chunk-15-1.jpeg',
                         'index_files/figure-html/unnamed-chunk-13-2.jpeg',
-                        'index_files/figure-html/unnamed-chunk-13-3.jpeg',
+                        'index_files/figure-html/unnamed-chunk-16-3.jpeg',
                         'index_files/figure-html/unnamed-chunk-13-4.jpeg'))
 ```
 \end{landscape}
@@ -259,14 +255,14 @@ knitr::include_graphics('index_files/figure-html/result_GrowthParam.png')
 
 
 
-```{r curvevb, fig.show='hold', fig.cap="Theoretical von Bertalanffy growth curves for krill by stratum and sex with calculated growth parameters (L inf and K)."}
+```{r curvevb, fig.show='hold', fig.cap="Theorical von Bertalanffy growth curves for krill by method, stratum and sex with calculated growth parameters (L inf and K). (BS=Bransfield Strait, EI= Elephant Island, GS= Gerlache Strait, JOIN= Joinville Island, SSWI= South West)"}
 knitr::include_graphics('index_files/figure-html/unnamed-chunk-27-1.jpeg')
 ```
 
 
 \newpage
-```{r Mgra, out.width='100%', fig.cap="Natural Mortality estimate by sex, strata and method"}
-knitr::include_graphics('index_files/figure-html/unnamed-chunk-35-1.jpeg')
+```{r Mgra, out.width='100%', fig.cap="Natural Mortality estimate by sex, strata and method to Antarctic krill in 48.1 Subarea"}
+knitr::include_graphics('index_files/figure-html/Nat_M.png')
 ```
 
 
